--- a/slides/05-tune.html
+++ b/slides/05-tune.html
@@ -395,7 +395,7 @@ class: your-turn
 
 ```r
 rf_spec &lt;- 
-  rand_forest(trees = 1000) %&gt;% 
+  rand_forest() %&gt;% 
   set_engine("ranger") %&gt;% 
   set_mode("classification")
 
@@ -414,6 +414,7 @@ Here is the output from `fit_resamples()`...
 
 
 ```r
+set.seed(100) # Important!
 rf_results &lt;-
   rf_workflow %&gt;% 
   fit_resamples(resamples = so_folds,
@@ -424,7 +425,7 @@ rf_results %&gt;%
 # # A tibble: 1 x 5
 #   .metric .estimator  mean     n std_err
 #   &lt;chr&gt;   &lt;chr&gt;      &lt;dbl&gt; &lt;int&gt;   &lt;dbl&gt;
-# 1 roc_auc binary     0.680    10  0.0202
+# 1 roc_auc binary     0.683    10  0.0206
 ```
 
 
@@ -433,7 +434,7 @@ class: your-turn
 
 # Your Turn 1
 
-Edit the random forest model to create 1000 trees, and tune the `mtry` and `min_n` hyperparameters. 
+Edit the random forest model to tune the `mtry` and `min_n` hyperparameters. 
 
 Update your workflow to use the tuned model.
 
@@ -441,7 +442,7 @@ Then use `tune_grid()` to find the best combination of hyper-parameters to maxim
 
 How does it compare to the average ROC AUC across folds from `fit_resamples()`?
 
-<div class="countdown" id="timer_5eac26ac" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eac3fe8" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -451,8 +452,7 @@ How does it compare to the average ROC AUC across folds from `fit_resamples()`?
 ```r
 rf_tuner &lt;- 
   rand_forest(mtry = tune(),
-              min_n = tune(),
-              trees = 1000) %&gt;% 
+              min_n = tune()) %&gt;% 
   set_engine("ranger") %&gt;% 
   set_mode("classification")
 
@@ -460,6 +460,7 @@ rf_workflow &lt;-
   rf_workflow %&gt;% 
   update_model(rf_tuner)
 
+set.seed(100) # Important!
 rf_results &lt;-
   rf_workflow %&gt;% 
   tune_grid(resamples = so_folds,
@@ -475,16 +476,16 @@ rf_results %&gt;%
 # # A tibble: 10 x 7
 #     mtry min_n .metric .estimator  mean     n std_err
 #    &lt;int&gt; &lt;int&gt; &lt;chr&gt;   &lt;chr&gt;      &lt;dbl&gt; &lt;int&gt;   &lt;dbl&gt;
-#  1     2    11 roc_auc binary     0.687    10  0.0177
-#  2     4    38 roc_auc binary     0.688    10  0.0196
-#  3     7    27 roc_auc binary     0.684    10  0.0209
-#  4     9    18 roc_auc binary     0.678    10  0.0213
-#  5    12    34 roc_auc binary     0.681    10  0.0222
-#  6    13     5 roc_auc binary     0.663    10  0.0213
-#  7    16    31 roc_auc binary     0.679    10  0.0225
-#  8    17     7 roc_auc binary     0.663    10  0.0220
-#  9    19    15 roc_auc binary     0.668    10  0.0227
-# 10    21    25 roc_auc binary     0.672    10  0.0227
+#  1     3    13 roc_auc binary     0.685    10  0.0198
+#  2     4    15 roc_auc binary     0.684    10  0.0201
+#  3     7    36 roc_auc binary     0.684    10  0.0203
+#  4     8    20 roc_auc binary     0.683    10  0.0209
+#  5    10    28 roc_auc binary     0.683    10  0.0211
+#  6    13    21 roc_auc binary     0.680    10  0.0219
+#  7    14     8 roc_auc binary     0.668    10  0.0221
+#  8    18    31 roc_auc binary     0.676    10  0.0225
+#  9    20     5 roc_auc binary     0.659    10  0.0220
+# 10    22    38 roc_auc binary     0.678    10  0.0231
 ```
 
 ---
@@ -495,16 +496,16 @@ rf_results %&gt;%
 # # A tibble: 100 x 6
 #    id      mtry min_n .metric .estimator .estimate
 #    &lt;chr&gt;  &lt;int&gt; &lt;int&gt; &lt;chr&gt;   &lt;chr&gt;          &lt;dbl&gt;
-#  1 Fold01    19    15 roc_auc binary         0.709
-#  2 Fold01    13     5 roc_auc binary         0.704
-#  3 Fold01    12    34 roc_auc binary         0.724
-#  4 Fold01    16    31 roc_auc binary         0.715
-#  5 Fold01     7    27 roc_auc binary         0.731
-#  6 Fold01    21    25 roc_auc binary         0.710
-#  7 Fold01     4    38 roc_auc binary         0.738
-#  8 Fold01     9    18 roc_auc binary         0.720
-#  9 Fold01     2    11 roc_auc binary         0.741
-# 10 Fold01    17     7 roc_auc binary         0.698
+#  1 Fold01    10    28 roc_auc binary         0.726
+#  2 Fold01     7    36 roc_auc binary         0.732
+#  3 Fold01    13    21 roc_auc binary         0.717
+#  4 Fold01     3    13 roc_auc binary         0.741
+#  5 Fold01    14     8 roc_auc binary         0.709
+#  6 Fold01    18    31 roc_auc binary         0.717
+#  7 Fold01     4    15 roc_auc binary         0.744
+#  8 Fold01    20     5 roc_auc binary         0.698
+#  9 Fold01    22    38 roc_auc binary         0.710
+# 10 Fold01     8    20 roc_auc binary         0.729
 # # … with 90 more rows
 ```
 
@@ -588,11 +589,11 @@ template: show-best
 # # A tibble: 5 x 7
 #    mtry min_n .metric .estimator  mean     n std_err
 #   &lt;int&gt; &lt;int&gt; &lt;chr&gt;   &lt;chr&gt;      &lt;dbl&gt; &lt;int&gt;   &lt;dbl&gt;
-# 1     4    38 roc_auc binary     0.688    10  0.0196
-# 2     2    11 roc_auc binary     0.687    10  0.0177
-# 3     7    27 roc_auc binary     0.684    10  0.0209
-# 4    12    34 roc_auc binary     0.681    10  0.0222
-# 5    16    31 roc_auc binary     0.679    10  0.0225
+# 1     3    13 roc_auc binary     0.685    10  0.0198
+# 2     7    36 roc_auc binary     0.684    10  0.0203
+# 3     4    15 roc_auc binary     0.684    10  0.0201
+# 4     8    20 roc_auc binary     0.683    10  0.0209
+# 5    10    28 roc_auc binary     0.683    10  0.0211
 ```
 
 
@@ -630,7 +631,7 @@ Shows the .display[top] combination of hyper-parameters.
 ```r
 so_best &lt;-
   rf_results %&gt;% 
-    select_best(metric = "roc_auc")
+  select_best(metric = "roc_auc")
 
 so_best
 ```
@@ -643,7 +644,7 @@ template: select-best
 # # A tibble: 1 x 2
 #    mtry min_n
 #   &lt;int&gt; &lt;int&gt;
-# 1     4    38
+# 1     3    13
 ```
 
 ---
@@ -659,7 +660,7 @@ Replaces `tune()` placeholders in a model/recipe/workflow with a set of hyper-pa
 ```r
 last_rf_workflow &lt;- 
   rf_workflow %&gt;%
-    finalize_workflow(so_best) 
+  finalize_workflow(so_best) 
 ```
 
 ---
@@ -714,7 +715,7 @@ Use `select_best()`, `finalize_workflow()`, and `last_fit()` to take the best co
 
 How does our actual test ROC AUC compare to our cross-validated estimate?
 
-<div class="countdown" id="timer_5eac2a27" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5eac41c7" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -752,8 +753,8 @@ last_rf_fit %&gt;%
 # # A tibble: 2 x 3
 #   .metric  .estimator .estimate
 #   &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;
-# 1 accuracy binary         0.680
-# 2 roc_auc  binary         0.733
+# 1 accuracy binary         0.677
+# 2 roc_auc  binary         0.735
 ```
 
 
@@ -771,16 +772,16 @@ last_rf_fit %&gt;%
 # # A tibble: 1,398 x 6
 #    id    .pred_Remote `.pred_Not remo…  .row .pred_class
 #    &lt;chr&gt;        &lt;dbl&gt;            &lt;dbl&gt; &lt;int&gt; &lt;fct&gt;      
-#  1 trai…        0.514            0.486     1 Remote     
-#  2 trai…        0.393            0.607     6 Not remote 
-#  3 trai…        0.232            0.768    18 Not remote 
-#  4 trai…        0.606            0.394    23 Remote     
-#  5 trai…        0.476            0.524    30 Not remote 
-#  6 trai…        0.556            0.444    50 Remote     
-#  7 trai…        0.838            0.162    53 Remote     
-#  8 trai…        0.404            0.596    56 Not remote 
-#  9 trai…        0.578            0.422    63 Remote     
-# 10 trai…        0.300            0.700    68 Not remote 
+#  1 trai…        0.505            0.495     1 Remote     
+#  2 trai…        0.410            0.590     6 Not remote 
+#  3 trai…        0.185            0.815    18 Not remote 
+#  4 trai…        0.654            0.346    23 Remote     
+#  5 trai…        0.463            0.537    30 Not remote 
+#  6 trai…        0.547            0.453    50 Remote     
+#  7 trai…        0.855            0.145    53 Remote     
+#  8 trai…        0.432            0.568    56 Not remote 
+#  9 trai…        0.588            0.412    63 Remote     
+# 10 trai…        0.315            0.685    68 Not remote 
 # # … with 1,388 more rows, and 1 more variable: Remote &lt;fct&gt;
 ```
 
