--- a/slides/02-resample.html
+++ b/slides/02-resample.html
@@ -4,7 +4,7 @@
     <title>Resample Models</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-04-30" />
+    <meta name="date" content="2020-08-03" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
@@ -131,7 +131,7 @@ Run the first code chunk. Then fill in the blanks to
 2. Fit the `rt_spec` to the training set.
 3. Predict with the testing set and compute the rmse of the fit.
 
-<div class="countdown" id="timer_5eab4bc3" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f28d4a8" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -163,7 +163,7 @@ What would happen if you repeated this process? Would you get the same answers?
 
 Then rerun the last code chunk from Your Turn 1. Do you get the same answer? Try it a few times.
 
-<div class="countdown" id="timer_5eab4ada" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f28d621" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -508,7 +508,7 @@ cv_folds &lt;-
 cv_folds
 ```
 
-<div class="countdown" id="timer_5eab4ddc" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f28d754" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -607,7 +607,7 @@ rt_spec %&gt;%
 # #  10-fold cross-validation using stratification 
 # # A tibble: 10 x 4
 #    splits           id     .metrics         .notes          
-#    &lt;list&gt;           &lt;chr&gt;  &lt;list&gt;           &lt;list&gt;          
+#    &lt;named list&gt;     &lt;chr&gt;  &lt;list&gt;           &lt;list&gt;          
 #  1 &lt;split [2K/221]&gt; Fold01 &lt;tibble [2 × 3]&gt; &lt;tibble [0 × 1]&gt;
 #  2 &lt;split [2K/221]&gt; Fold02 &lt;tibble [2 × 3]&gt; &lt;tibble [0 × 1]&gt;
 #  3 &lt;split [2K/220]&gt; Fold03 &lt;tibble [2 × 3]&gt; &lt;tibble [0 × 1]&gt;
@@ -694,7 +694,7 @@ rt_spec %&gt;%
   rmse(truth, .pred)
 ```
 
-<div class="countdown" id="timer_5eab4a85" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f28d6ba" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
