--- a/slides/01-model.html
+++ b/slides/01-model.html
@@ -4,7 +4,7 @@
     <title>Build A Model</title>
     <meta charset="utf-8" />
     <meta name="author" content="Alison Hill" />
-    <meta name="date" content="2020-08-03" />
+    <meta name="date" content="2020-08-26" />
     <script src="libs/header-attrs/header-attrs.js"></script>
     <link href="libs/remark-css/default.css" rel="stylesheet" />
     <link href="libs/countdown/countdown.css" rel="stylesheet" />
@@ -468,7 +468,7 @@ Write a pipe that creates a model that uses `lm()` to fit a linear regression. S
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
 
-<div class="countdown" id="timer_5f28d6a4" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f46ebcc" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -557,7 +557,7 @@ give the same results as
 lm(Sale_Price ~ Gr_Liv_Area, data = ames)
 ```
 
-<div class="countdown" id="timer_5f28d571" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f46ec9e" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -583,7 +583,7 @@ lm_fit
 # Fit time:  2ms 
 # 
 # Call:
-# stats::lm(formula = formula, data = data)
+# stats::lm(formula = Sale_Price ~ Gr_Liv_Area, data = data)
 # 
 # Coefficients:
 # (Intercept)  Gr_Liv_Area  
@@ -684,7 +684,7 @@ Fill in the blanks. Use `predict()` to
 
 *Hint: Be sure to remove every `_` before running the code!*
 
-<div class="countdown" id="timer_5f28d459" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f46ec72" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -934,7 +934,7 @@ Take a minute and decide which model:
 
 ]
 
-<div class="countdown" id="timer_5f28d615" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f46eca7" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1022,7 +1022,7 @@ initial_split(data, prop = 3/4)
 ```r
 ames_split &lt;- initial_split(ames, prop = 0.75)
 ames_split
-# &lt;Training/Validation/Total&gt;
+# &lt;Analysis/Assess/Total&gt;
 # &lt;2198/732/2930&gt;
 ```
 
@@ -1132,7 +1132,7 @@ Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5f28d53d" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f46ec3f" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
