--- a/slides/rmed01-model.html
+++ b/slides/rmed01-model.html
@@ -508,7 +508,7 @@ Adds an engine to power or implement the model.
 
 
 ```r
-lm_spec %&gt;% set_engine(engine = "lm", ...)
+logistic_reg() %&gt;% set_engine(engine = "glm")
 ```
 
 ---
@@ -542,7 +542,7 @@ Sets the class of problem the model will solve, which influences which output is
 
 
 ```r
-lm_spec %&gt;% set_mode(mode = "regression")
+logistic_reg() %&gt;% set_mode(mode = "classification")
 ```
 
 ---
@@ -565,7 +565,7 @@ lr_mod
 *Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
 
 
-<div class="countdown" id="timer_5f472c21" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4752bf" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1025,7 +1025,7 @@ Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5f472e5b" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4753c7" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1136,7 +1136,7 @@ Note your accuracy from above. Then change your seed number and rerun just the l
 
 Try it a few times with a few different seeds.
 
-<div class="countdown" id="timer_5f472eea" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f475311" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1482,7 +1482,7 @@ alz_folds &lt;-
 alz_folds
 ```
 
-<div class="countdown" id="timer_5f472c82" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47511a" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1518,15 +1518,15 @@ class: middle
 
 
 ```r
-split1       &lt;- cv_folds %&gt;% pluck("splits", 1)
+split1       &lt;- alz_folds %&gt;% pluck("splits", 1)
 split1_train &lt;- training(split1)
 split1_test  &lt;- testing(split1)
 
-rt_spec %&gt;% 
-  fit(Sale_Price ~ ., data = split1_train) %&gt;% 
+lr_mod %&gt;% 
+  fit(Class ~ ., data = split1_train) %&gt;% 
   predict(split1_test) %&gt;% 
-  mutate(truth = split1_test$Sale_Price) %&gt;% 
-  rmse(truth, .pred)
+  mutate(truth = split1_test$Class) %&gt;% 
+  rmse(truth, .pred_class)
 
 # rinse and repeat
 split2 &lt;- ...
@@ -1650,7 +1650,7 @@ lr_mod %&gt;%
   accuracy(truth = true_class, estimate = .pred_class)
 ```
 
-<div class="countdown" id="timer_5f472d1b" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f475147" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
