--- a/slides/rmed01-model.html
+++ b/slides/rmed01-model.html
@@ -551,28 +551,18 @@ class: your-turn
 
 # Your turn 1
 
-Run the chunk below and look at the output. Then, copy/paste the code chunk and edit to create:
+Run the chunk in your .Rmd and look at the output. Then, copy/paste the code and edit to create:
 
 + a decision tree model for classification 
+
 + that uses the `C5.0` engine. 
 
 Save it as `tree_mod` and look at the object. What is different about the output?
 
+*Hint: you'll need https://www.tidymodels.org/find/parsnip/*
 
 
-```r
-lr_mod &lt;- 
-  logistic_reg() %&gt;% 
-  set_engine(engine = "glm") %&gt;% 
-  set_mode("classification")
-lr_mod
-```
-
-
-*Hint: you'll need https://tidymodels.github.io/parsnip/articles/articles/Models.html*
-
-
-<div class="countdown" id="timer_5f475f0e" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f476070" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1025,7 +1015,7 @@ Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5f476095" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4760ae" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1129,7 +1119,7 @@ Note your accuracy from above. Then change your seed number and rerun just the l
 
 Try it a few times with a few different seeds.
 
-<div class="countdown" id="timer_5f475f47" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f475f90" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1487,7 +1477,7 @@ alz_folds &lt;-
 alz_folds
 ```
 
-<div class="countdown" id="timer_5f475f82" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f476088" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1655,7 +1645,7 @@ lr_mod %&gt;%
   accuracy(truth = true_class, estimate = .pred_class)
 ```
 
-<div class="countdown" id="timer_5f47606c" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f475e9a" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
