--- a/slides/rmed01-model.html
+++ b/slides/rmed01-model.html
@@ -562,7 +562,7 @@ Save it as `tree_mod` and look at the object. What is different about the output
 *Hint: you'll need https://www.tidymodels.org/find/parsnip/*
 
 
-<div class="countdown" id="timer_5f476070" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4762c2" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -597,7 +597,7 @@ class: inverse, middle, center
 
 --
 
-## First---what does it mean to use a model?
+## First - what does it mean to use a model?
 
 ---
 class: inverse, middle, center
@@ -641,9 +641,8 @@ lr_mod %&gt;%
 ]
 
 ---
-class: inverse, middle, center
 
-# "All models are wrong, but some are useful"
+## "All models are wrong, but some are useful"
 
 
 
@@ -652,9 +651,8 @@ class: inverse, middle, center
 
 
 ---
-class: inverse, middle, center
 
-# "All models are wrong, but some are useful"
+## "All models are wrong, but some are useful"
 
 
 
@@ -662,7 +660,7 @@ class: inverse, middle, center
 ]
 ---
 
-# Fitted models can also be used to predict new data
+## Predict new data
 
 
 ```r
@@ -693,7 +691,6 @@ How many people have used a model to generate .display[predictions] with R?
 
 # Predict old data
 
-.pull-right[
 
 
 ```r
@@ -702,15 +699,14 @@ tree_mod %&gt;%
       data = alz) %&gt;% 
   predict(new_data = alz) %&gt;% 
   mutate(true_class = alz$Class) %&gt;% 
-  accuracy(truth = true_class, estimate = .pred_class)
+  accuracy(truth = true_class, 
+           estimate = .pred_class)
 # # A tibble: 1 x 3
 #   .metric  .estimator .estimate
 #   &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;
 # 1 accuracy binary         0.856
 ```
 
-
-]
 
 ---
 
@@ -725,7 +721,8 @@ tree_mod %&gt;%
       data = alz) %&gt;% 
   predict(new_data = alz) %&gt;% 
   mutate(true_class = alz$Class) %&gt;% 
-  accuracy(truth = true_class, estimate = .pred_class)
+  accuracy(truth = true_class, 
+           estimate = .pred_class)
 # # A tibble: 1 x 3
 #   .metric  .estimator .estimate
 #   &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;
@@ -745,7 +742,8 @@ tree_mod %&gt;%
       data = alz) %&gt;% 
 * predict(new_data = alz_new) %&gt;%
 * mutate(true_class = alz_new$Class) %&gt;%
-  accuracy(truth = true_class, estimate = .pred_class)
+  accuracy(truth = true_class, 
+           estimate = .pred_class)
 # # A tibble: 1 x 3
 #   .metric  .estimator .estimate
 #   &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;
@@ -1005,17 +1003,19 @@ class: your-turn
 
 Fill in the blanks. 
 
-Use `initial_split()`, `training()`, `testing()`, `lm()` and `rmse()` to:
+Use `initial_split()`, `training()`, and `testing()` to:
 
 1. Split **alz** into training and test sets. Save the rsplit!
 
-1. Extract the training data. Fit a linear model to it. Save the model!
+2. Extract the training data and fit your classification tree model.
 
-1. Measure the accuracy of your classification tree model with your test set.  
+3. Predict the testing data, and save the true `Class` values.
+
+4. Measure the accuracy of your model with your test set.  
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5f4760ae" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4763f0" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1119,7 +1119,7 @@ Note your accuracy from above. Then change your seed number and rerun just the l
 
 Try it a few times with a few different seeds.
 
-<div class="countdown" id="timer_5f475f90" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f476237" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1477,7 +1477,7 @@ alz_folds &lt;-
 alz_folds
 ```
 
-<div class="countdown" id="timer_5f476088" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4762bb" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1645,7 +1645,7 @@ lr_mod %&gt;%
   accuracy(truth = true_class, estimate = .pred_class)
 ```
 
-<div class="countdown" id="timer_5f475e9a" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f476168" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
