--- a/slides/rmed01-model.html
+++ b/slides/rmed01-model.html
@@ -562,7 +562,7 @@ Save it as `tree_mod` and look at the object. What is different about the output
 *Hint: you'll need https://www.tidymodels.org/find/parsnip/*
 
 
-<div class="countdown" id="timer_5f4762c2" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f476917" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -647,7 +647,7 @@ lr_mod %&gt;%
 
 
 &lt;img src="figs/rmed01-model/unnamed-chunk-20-1.png" width="504" style="display: block; margin: auto;" /&gt;
-]
+
 
 
 ---
@@ -657,7 +657,7 @@ lr_mod %&gt;%
 
 
 &lt;img src="figs/rmed01-model/unnamed-chunk-22-1.png" width="504" style="display: block; margin: auto;" /&gt;
-]
+
 ---
 
 ## Predict new data
@@ -1015,7 +1015,7 @@ Use `initial_split()`, `training()`, and `testing()` to:
 
 Keep `set.seed(100)` at the start of your code.
 
-<div class="countdown" id="timer_5f4763f0" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f47670f" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">04</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1119,7 +1119,7 @@ Note your accuracy from above. Then change your seed number and rerun just the l
 
 Try it a few times with a few different seeds.
 
-<div class="countdown" id="timer_5f476237" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4768e1" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">02</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1477,7 +1477,7 @@ alz_folds &lt;-
 alz_folds
 ```
 
-<div class="countdown" id="timer_5f4762bb" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f476860" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">01</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1517,7 +1517,7 @@ split1       &lt;- alz_folds %&gt;% pluck("splits", 1)
 split1_train &lt;- training(split1)
 split1_test  &lt;- testing(split1)
 
-lr_mod %&gt;% 
+tree_mod %&gt;% 
   fit(Class ~ ., data = split1_train) %&gt;% 
   predict(split1_test) %&gt;% 
   mutate(truth = split1_test$Class) %&gt;% 
@@ -1539,7 +1539,7 @@ Trains and tests a resampled model.
 
 
 ```r
-lr_mod %&gt;% 
+tree_mod %&gt;% 
   fit_resamples(
     Class ~ tau + VEGF, 
     resamples = alz_folds
@@ -1550,7 +1550,7 @@ lr_mod %&gt;%
 
 
 ```r
-lr_mod %&gt;% 
+tree_mod %&gt;% 
   fit_resamples(
     Class ~ tau + VEGF, 
     resamples = alz_folds
@@ -1592,7 +1592,7 @@ _results %&gt;% collect_metrics(summarize = TRUE)
 ---
 
 ```r
-lr_mod %&gt;% 
+tree_mod %&gt;% 
   fit_resamples(
     Class ~ tau + VEGF, 
     resamples = alz_folds
@@ -1601,16 +1601,16 @@ lr_mod %&gt;%
 # # A tibble: 20 x 4
 #    id     .metric  .estimator .estimate
 #    &lt;chr&gt;  &lt;chr&gt;    &lt;chr&gt;          &lt;dbl&gt;
-#  1 Fold01 accuracy binary         0.742
-#  2 Fold01 roc_auc  binary         0.828
+#  1 Fold01 accuracy binary         0.774
+#  2 Fold01 roc_auc  binary         0.692
 #  3 Fold02 accuracy binary         0.839
-#  4 Fold02 roc_auc  binary         0.909
-#  5 Fold03 accuracy binary         0.933
-#  6 Fold03 roc_auc  binary         0.960
-#  7 Fold04 accuracy binary         0.833
-#  8 Fold04 roc_auc  binary         0.909
-#  9 Fold05 accuracy binary         0.8  
-# 10 Fold05 roc_auc  binary         0.875
+#  4 Fold02 roc_auc  binary         0.848
+#  5 Fold03 accuracy binary         0.867
+#  6 Fold03 roc_auc  binary         0.852
+#  7 Fold04 accuracy binary         0.8  
+#  8 Fold04 roc_auc  binary         0.795
+#  9 Fold05 accuracy binary         0.767
+# 10 Fold05 roc_auc  binary         0.744
 # # … with 10 more rows
 ```
 
@@ -1632,12 +1632,12 @@ class: your-turn
 
 # Your Turn 5
 
-Modify the code below to use `fit_resamples` and `alz_folds` to cross-validate the KNN model. What is the ROC AUC that you collect at the end?
+Modify the code below to use `fit_resamples` and `alz_folds` to cross-validate the classification tree model. What is the ROC AUC that you collect at the end?
 
 
 ```r
 set.seed(100)
-lr_mod %&gt;% 
+tree_mod %&gt;% 
   fit(Class ~ tau + VEGF, 
       data = alz_train) %&gt;% 
   predict(new_data = alz_test) %&gt;% 
@@ -1645,7 +1645,7 @@ lr_mod %&gt;%
   accuracy(truth = true_class, estimate = .pred_class)
 ```
 
-<div class="countdown" id="timer_5f476168" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_5f4769ec" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1671,7 +1671,7 @@ lr_mod %&gt;%
 
 
 ```r
-lr_mod %&gt;% 
+tree_mod %&gt;% 
   fit(Class ~ tau + VEGF, data = alz_train) %&gt;% 
   predict(alz_test) %&gt;% 
   mutate(truth = alz_test$Class) %&gt;% 
